fix layout issue
I fix all layout issues

--- a/app/assets/stylesheets/widgets/site_navigations.css.scss
+++ b/app/assets/stylesheets/widgets/site_navigations.css.scss
@@ -31,3 +31,13 @@
   padding: 10px 16px;
   font-size: 14px;
 }
+
+.pull-right .menu-item {
+  height: 25px !important;
+}
+
+.search-input {
+  width: 220px;
+  margin-top: 5px;
+  margin-right: 35px;
+}
